# Graph-recommendation

./: README.md  pyproject.toml
src/: main.py  preprocessing.py  training.py
src/features/: feature_eng.py  network_similarity.py  review_features.py  sentiment.py
