[tool.poetry]
name = "graph-recommendation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.2.1"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
nltk = "^3.8.1"
xgboost = "^2.0.3"
transformers = "^4.36.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
